--- a/app/app.css
+++ b/app/app.css
@@ -1,30 +1,22 @@
 /* app css stylesheet */
 
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+.mainTable{
+  display: table;
+    border-collapse: separate;
+    border-spacing: 2px;
+    border-color: gray;
+    border: 1px solid;
 }
 
-.menu:before {
-  content: "[";
+.mainTable tr{
+  height:35px;
 }
 
-.menu:after {
-  content: "]";
+.mainTable th{
+  width:150px;
 }
 
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+.mainTable td{
+  width:150px;
+  text-align: left;
 }
